--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -4,14 +4,14 @@
         <div class = "text-center">
             <h2>Checkout</h2>
         </div>
-        <div class = "row  flex-column-reverse flex-lg-row flex-md-row  pt-4 mt-5">
+        <div class = "row flex-column-reverse flex-lg-row flex-md-row pt-4 mt-5">
             <div class = "col-lg-6 col-12 col1">
                 <nav>
                     <ul class = "nav nav-tabs justify-content-center" id = "nav-tab" role = "tablist">
-                        <li class="nav-link"><a class="nav-item active" id="nav-shipping-tab" data-bs-toggle="tab" data-bs-target="#nav-shipping"
+                        <li class="nav-link"><a class="nav-item" [ngClass]="shipping ? 'active' : ''" id="nav-shipping-tab" data-bs-toggle="tab" data-bs-target="#nav-shipping"
                             role="tab" aria-controls="nav-shipping" aria-selected="true" (click)="showshipping()">Information</a></li>
                         <span *ngIf="showPaymentBtn">|</span>
-                       <li class="nav-link" *ngIf="showPaymentBtn"><a class="nav-item active" id="nav-payment-tab" data-bs-toggle="tab" data-bs-target="#nav-payment"
+                       <li class="nav-link"><a class="nav-item" [ngClass]="!shipping ? 'active' : ''" id="nav-payment-tab" data-bs-toggle="tab" data-bs-target="#nav-payment"
                         role="tab" aria-controls="nav-payment" aria-selected="false" (click)="showpayment()">Payment</a></li>
                     </ul>
 
@@ -146,7 +146,7 @@
 
                         <div class="payment_method">
 
-                         <div class="db_card">
+                         <!-- <div class="db_card">
                            <label class="check_box ">Credit Card/Dabit Card
                                 <input type="radio" checked="checked" name="radio">
                                 <span class = "float-right"> <img src="assets/img/checkout/american-express.png">
@@ -183,10 +183,10 @@
 
                              </div>
 
-                         </form>
+                         </form>-->
                         <div class="payment_option">
                             <ul class = "pt-2">
-                                <li>
+                                <!-- <li>
                                  <label class="check_box ">Google Pay UPI
                                      <img class="gpay_img" src="assets/img/checkout/google-pay.png">
 
@@ -207,7 +207,7 @@
                                          <input type="radio" name="radio">
                                           <span class="checkmark"></span>
                                      </label>
-                                </li>
+                                </li> -->
                                 <li>
                                  <label class="check_box ">Cash On Delivery
                                      <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
