--- a/src/app/product/product-detail/product-detail.component.html
+++ b/src/app/product/product-detail/product-detail.component.html
@@ -48,6 +48,7 @@
   </div>
 
   --->
+
 <!----------Breadcrumb Starts---------->
 <section class="py-2 breadcrumb_section">
   <div class="container">
@@ -63,6 +64,7 @@
   </div>
 </section>
 <!----------Breadcrumb end---------->
+<div class="" *ngIf="product">
 <!----------Product Details Section Starts---------->
 <section id = "product-details">
   <div class="container product_container ">
@@ -100,28 +102,28 @@
             <div class="preview" *ngIf="productVariation != ''">
               <form [formGroup]="variantForm">
                 <div *ngIf="productVariation.attribute1 != '' && productVariation.attribute2[1].variantnumber != 41" class = "sizes">
-                  <label for="variant1">{{productVariation.attribute1[1].variant_tag}}</label>
+                  <label for="variant2"  class = "varient_label"><h6 class = "mb-1">{{productVariation.attribute1[1].variant_tag}}:</h6></label>
                   <div *ngFor="let varient1 of productVariation.attribute1[0]" class="size_list">
                     <input type="radio" value="{{varient1}}" name="variant1" formControlName="variant1" (change)="changeVariation()">
                     <label for="male">{{varient1}}</label>
                   </div>
                 </div>
                 <div *ngIf="productVariation.attribute2[0] != '' && productVariation.attribute2[1].variantnumber != 41" class = "sizes">
-                  <label for="variant2">{{productVariation.attribute2[1].variant_tag}}:</label>
+                  <label for="variant2"  class = "varient_label"><h6 class = "mb-1">{{productVariation.attribute2[1].variant_tag}}:</h6></label>
                   <div *ngFor="let varient2 of productVariation.attribute2[0]" class="size_list">
                     <input type="radio" value="{{varient2}}" name="variant2" formControlName="variant2" (change)="changeVariation()">
                     <label for="male">{{varient2}}</label>
                   </div>
                 </div>
                 <div *ngIf="productVariation.attribute3[0] != '' && productVariation.attribute2[1].variantnumber != 41" class = "sizes">
-                  <label for="variant3">{{productVariation.attribute3[1].variant_tag}}:</label>
+                  <label for="variant2"  class = "varient_label"><h6 class = "mb-1">{{productVariation.attribute3[1].variant_tag}}:</h6></label>
                   <div *ngFor="let varient3 of productVariation.attribute3[0]" class="size_list">
                     <input type="radio" value="{{varient3}}" name="variant3" formControlName="variant3" (change)="changeVariation()">
                     <label for="male">{{varient3}}</label>
                   </div>
                 </div>
                 <div *ngIf="productVariation.attribute4[0] != '' && productVariation.attribute2[1].variantnumber != 41" class = "sizes">
-                  <label for="variant4">{{productVariation.attribute4[1].variant_tag}}:</label>
+                  <label for="variant2"  class = "varient_label"><h6 class = "mb-1">{{productVariation.attribute4[1].variant_tag}}:</h6></label>
                   <div *ngFor="let varient4 of productVariation.attribute4[0]" class="size_list">
                     <input type="radio" value="{{varient4}}" name="variant4" formControlName="variant4" (change)="changeVariation()">
                     <label for="male">{{varient4}}</label>
@@ -200,10 +202,11 @@
 
         </div>
       </div>
-      <nav class = "pt-3">
+      <div class="product_detail" *ngIf="productVariation.data.detail != ''">
+        <nav class = "pt-3">
         <div class="nav nav-tabs gap-2" id="nav-tab" role="tablist">
           <button class="nav-link active" id="nav-materials-tab" data-bs-toggle="tab" data-bs-target="#nav-materials"
-            type="button" role="tab" aria-controls="materials" aria-selected="true">Materials</button>
+            type="button" role="tab" aria-controls="materials" aria-selected="true" *ngFor="let detail of productVariation.data.detail">Materials</button>
           <button class="nav-link" id="nav-tassels-tab" data-bs-toggle="tab" data-bs-target="#nav-tassels"
             type="button" role="tab" aria-controls="nav-tassels" aria-selected="false">Tassels</button>
           <button class="nav-link" id="nav-lead-time-tab" data-bs-toggle="tab" data-bs-target="#nav-lead-time"
@@ -213,27 +216,29 @@
           <button class="nav-link" id="nav-size-tab" data-bs-toggle="tab" data-bs-target="#nav-size"
             type="button" role="tab" aria-controls="nav-size" aria-selected="true">What does 3' x 5' look like?</button>
         </div>
-      </nav>
-      <div class="tab-content pt-4" id="nav-tabContent">
-        <div class="tab-pane fade show active" id="nav-materials" role="tabpanel" aria-labelledby="nav-materials-tab">
-          <p>Your order is made entirely by hand from 100% natural wool, which means there will be natural (and beautiful) variations in pattern and color. Wool shrinks! While we do our best, final sizes can vary by 1-4"</p>
-        </div>
-        <div class="tab-pane fade" id="nav-tassels" role="tabpanel" aria-labelledby="nav-tassels-tab">
-          <p>Traditional Moroccan rugs feature tassels just on one side. You can toggle them on and off below, as you prefer! Tassel length is normally in the range of 4–6".</p>
-        </div>
-        <div class="tab-pane fade" id="nav-lead-time" role="tabpanel" aria-labelledby="nav-lead-time-tab">
-          <p>Each and every Beni rug is woven entirely by hand and then washed and dried in the mountain air. Lead times are in the range of 12-14 weeks. For rugs 9'x12' and larger, please allow an additional 2 weeks.</p>
-        </div>
-        <div class="tab-pane fade" id="nav-returns" role="tabpanel" aria-labelledby="nav-returns-tab">
-          <h6 class = "mb-0">Can I return my rug?</h6>
-          <p >All orders are final and we cannot accept returns. Please ensure all measurements, colors, and design are correct before submitting your order!</p>
-          <h6 class = "mb-0">What if I don't like what I ordered?</h6>
-          <p>We certainly hope that never happens! We're here to answer whatever questions you've got before you place an order to ensure you're 100% happy with your one-of-a-kind design.</p>
-        </div>
-        <div class="tab-pane fade" id="nav-size" role="tabpanel" aria-labelledby="nav-size-tab">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, expedita!</p>
+        </nav>
+        <div class="tab-content pt-4" id="nav-tabContent">
+          <div class="tab-pane fade show active" id="nav-materials" role="tabpanel" aria-labelledby="nav-materials-tab">
+            <p>Your order is made entirely by hand from 100% natural wool, which means there will be natural (and beautiful) variations in pattern and color. Wool shrinks! While we do our best, final sizes can vary by 1-4"</p>
+          </div>
+          <div class="tab-pane fade" id="nav-tassels" role="tabpanel" aria-labelledby="nav-tassels-tab">
+            <p>Traditional Moroccan rugs feature tassels just on one side. You can toggle them on and off below, as you prefer! Tassel length is normally in the range of 4–6".</p>
+          </div>
+          <div class="tab-pane fade" id="nav-lead-time" role="tabpanel" aria-labelledby="nav-lead-time-tab">
+            <p>Each and every Beni rug is woven entirely by hand and then washed and dried in the mountain air. Lead times are in the range of 12-14 weeks. For rugs 9'x12' and larger, please allow an additional 2 weeks.</p>
+          </div>
+          <div class="tab-pane fade" id="nav-returns" role="tabpanel" aria-labelledby="nav-returns-tab">
+            <h6 class = "mb-0">Can I return my rug?</h6>
+            <p >All orders are final and we cannot accept returns. Please ensure all measurements, colors, and design are correct before submitting your order!</p>
+            <h6 class = "mb-0">What if I don't like what I ordered?</h6>
+            <p>We certainly hope that never happens! We're here to answer whatever questions you've got before you place an order to ensure you're 100% happy with your one-of-a-kind design.</p>
+          </div>
+          <div class="tab-pane fade" id="nav-size" role="tabpanel" aria-labelledby="nav-size-tab">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, expedita!</p>
+          </div>
         </div>
       </div>
+
     </div>
   <div class = "container-fluid">
   </div>
@@ -348,7 +353,7 @@
 <!-----------Product Our process  CSS  Ends---------->
 <hr class = "section_hr">
 <!----------Product Contact CSS  Starts---------->
-
+</div>
 
 
 <!-- <div class="variation">
